--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -7,7 +7,7 @@ authors = [
 ] # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
 [dependencies]
-BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subdir = "./", rev = "master" }
+BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subdir = "./", rev = "feat/prove-of-payment" }
 
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
@@ -22,6 +22,7 @@ BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subd
 
 [addresses]
 nbtc = "0x0"
+# bitcoin_spv = "0x1"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
