--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -1,10 +1,10 @@
 [package]
 name = "nBTC"
-edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
-# license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
+edition = "2024.beta"
+license = "MPL-2.0"
 authors = [
     "Native",
-] # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
+]
 
 [dependencies]
 BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subdir = "./", rev = "feat/prove-of-payment" }
