Fix: change bitcoin address to pkh (#19)
* change address to pkh; update scirpt; add addresses

Signed-off-by: sczembor <stanislaw.czembor@gmail.com>

* Update nBTC/Move.toml

Signed-off-by: sczembor <43810037+sczembor@users.noreply.github.com>

* Apply suggestions from code review

Signed-off-by: sczembor <43810037+sczembor@users.noreply.github.com>

---------

Signed-off-by: sczembor <stanislaw.czembor@gmail.com>
Signed-off-by: sczembor <43810037+sczembor@users.noreply.github.com>

--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -2,9 +2,7 @@
 name = "nBTC"
 edition = "2024.beta"
 license = "MPL-2.0"
-authors = [
-    "Native",
-]
+authors = ["Native"]
 
 [dependencies]
 BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subdir = "./", rev = "v0.3.0" }
@@ -22,6 +20,8 @@ BitcoinSPV = { git = "https://github.com/gonative-cc/move-bitcoin-spv.git", subd
 
 [addresses]
 nbtc = "0x0"
+light_client = "0x"
+fallback = "0x"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
