--- a/btc_execution/Move.toml
+++ b/btc_execution/Move.toml
@@ -1,8 +1,8 @@
 [package]
 name = "btc_execution"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
-# license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
-# authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
+license = "MPL-2.0"
+authors = ["Native"]
 
 [dependencies]
 
@@ -33,4 +33,3 @@ btc_execution = "0x0"
 # The dev-addresses section allows overwriting named addresses for the `--test`
 # and `--dev` modes.
 # alice = "0xB0B"
-
