--- a/btc_parser/Move.toml
+++ b/btc_parser/Move.toml
@@ -1,8 +1,8 @@
 [package]
-name = "bitcoin_executor"
+name = "btc_parser"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
-license = "MPL-2.0"
-authors = ["Native"]
+# license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
+# authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
 
 [dependencies]
 
@@ -11,14 +11,15 @@ authors = ["Native"]
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
 
 # For local dependencies use `local = path`. Path is relative to the package root
-btc_parser = { local = "../btc_parser", override = true}
+# Local = { local = "../path/to" }
 
 # To resolve a version conflict and force a specific version for dependency
 # override use `override = true`
 # Override = { local = "../conflicting/version", override = true }
 
 [addresses]
-bitcoin_executor = "0x0"
+btc_parser = "0x10"
+
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
 # alice = "0xA11CE"
@@ -32,4 +33,3 @@ bitcoin_executor = "0x0"
 # The dev-addresses section allows overwriting named addresses for the `--test`
 # and `--dev` modes.
 # alice = "0xB0B"
-# btc_parser="0x1000"
