--- a/.github/workflows/sui-move.yaml
+++ b/.github/workflows/sui-move.yaml
@@ -14,17 +14,25 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: mysten/sui-tools:ci
+    strategy:
+      matrix: { dir: ["bitcoin_executor", "btc_parser", "nBTC", "nbtc_swap"] }
+
     steps:
       - uses: actions/checkout@v4
       # lint only changed files
       - uses: tj-actions/changed-files@v46
         id: changed-files
         with:
-          files: "**/*.move"
+          files: "${{ matrix.dir }}/**/*.move"
           separator: ","
+      - name: changed-files
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: echo ${{ steps.changed-files-specific.outputs.all_changed_files }}
       - name: Build
+        working-directory: ${{ matrix.dir }}
         if: steps.changed-files.outputs.any_changed == 'true'
         run: sui move build
       - name: Run test
+        working-directory: ${{ matrix.dir }}
         if: steps.changed-files.outputs.any_changed == 'true'
         run: sui move test
