--- a/.github/workflows/markdown.yaml
+++ b/.github/workflows/markdown.yaml
@@ -20,6 +20,7 @@ jobs:
         id: changed-files
         with:
           files: "**/*.md"
+          files_ignore: "nbtc_swap/docs/nbtc_swap.md"
           separator: ","
       - uses: DavidAnson/markdownlint-cli2-action@v20
         if: steps.changed-files.outputs.any_changed == 'true'
