--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -27,6 +27,8 @@ jobs:
         with:
           run_install: false
           version: 10
+      - name: working dir
+        run: pwd
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
