--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\""
 	},
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"packageManager": "pnpm@10.8.0",
 	"dependencies": {
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
