--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -4,19 +4,16 @@ on:
     types: [checks_requested]
   pull_request:
     paths:
-      - "contrib/**.js"
-      - "contrib/**.ts"
+      - '**.js'
+      - '**.ts'
 
 concurrency:
   group: ci-${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    # defaults:
-    #   run:
-    #     working-directory: ./contrib
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +23,6 @@ jobs:
         name: Install pnpm
         with:
           run_install: false
-          version: 10
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
@@ -36,26 +32,14 @@ jobs:
         run: pnpm install
       ###
 
-      # - name: eslint
-      #   run: "pnpm run lint"
+      - name: eslint
+        run: "pnpm run lint"
+
+      - name: typecheck
+        run: "pnpm run typecheck"
+
+      - name: build
+        run: "pnpm run build"
 
       - name: test
         run: "pnpm run test"
-
-  prettier:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-          # This is important to fetch the changes to the previous commit
-          fetch-depth: 0
-
-      - name: Prettify code
-        uses: creyD/prettier_action@v4.6
-        with:
-          # prettier_options: -c .
-          only_changed: true
