--- a/.github/workflows/sui-move.yaml
+++ b/.github/workflows/sui-move.yaml
@@ -19,15 +19,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      # lint only changed files
-      # - uses: tj-actions/changed-files@v46
-      #   id: changed-files
-      #   with:
-      #     files: "**/*.move"
-      #     separator: ","
-      - name: changed Move files
-        if: steps.changed-files.outputs.any_changed == 'true'
-        run: echo ${{ steps.changed-files-specific.outputs.all_changed_files }}
-      - name: run test script
-        if: steps.changed-files.outputs.any_changed == 'true'
+
+      - name: run Sui Move test
         run: bash ./contrib/ci/run-move-tests.sh
