--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
 	"name": "sui-native",
-	"version": "0.1.0",
 	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\""
-	},
+	"version": "0.1.0",
+	"module": "index.ts",
 	"type": "module",
-	"keywords": [],
+	"private": true,
+	"main": "index.js",
 	"author": "",
 	"license": "ISC",
+	"scripts": {
+		"lint": "echo \"Error: no linter specified\"",
+		"typecheck": "tsc --noEmit",
+		"format:all": "prettier -w **/*.js **/*.ts **/*.md",
+		"format:move": "prettier-move --config .prettier-move.json -w",
+		"format:move-all": "prettier-move --config .prettier-move.json beelivers_auction/**/*.move mint_contract/**/*.move -w",
+		"test": "bun test"
+  },
 	"dependencies": {
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
 		"bitcoinjs-lib": "^6.1.7",
 		"tiny-secp256k1": "^2.2.3"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/node": "^24.2.1",
+		"typescript": "^5.9.2"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
 	}
 }
