--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -21,6 +21,11 @@ bitcoin_parser = { git = "https://github.com/gonative-cc/sui-bitcoin-spv.git", s
 
 [addresses]
 nbtc = "0x0"
+// TODO: need to set these addresses for mainnet
+bitcoin_lc = "0x1001"
+fallback_addr = "0x1002"
+bitcoin_lc = "0x1003"
+
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
