--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"typecheck": "tsc --noEmit",
 		"format:all": "prettier -w **/*.js **/*.ts **/*.md",
 		"format:move": "prettier-move --config .prettier-move.json -w",
-		"format:move-all": "prettier-move --config .prettier-move.json beelivers_auction/**/*.move mint_contract/**/*.move -w",
+		"format:move-all": "prettier-move --config .prettier-move.json **/*.move -w",
 		"test": "bun test"
   },
 	"dependencies": {
