fix: dependency with spv repo after refactore
Signed-off-by: Robert Zaremba <robert@zaremba.ch>
Signed-off-by: Vu Vo <vu.voth@gmail.com>

--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -6,7 +6,7 @@ authors = ["Native"]
 
 [dependencies]
 bitcoin_spv = { git = "https://github.com/gonative-cc/sui-bitcoin-spv.git", subdir = "./packages/bitcoin_spv", rev = "master" }
-btc_parser = { git = "https://github.com/gonative-cc/sui-bitcoin-spv", subdir = "./packages/btc_parser", rev = "master", override = true }
+bitcoin_parser = { git = "https://github.com/gonative-cc/sui-bitcoin-spv.git", subdir = "./packages/bitcoin_parser", rev = "master", override = true }
 
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
