--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "sui-native",
 	"description": "",
-	"version": "0.1.0",
-	"module": "index.ts",
+	"version": "0.0.0",
 	"type": "module",
 	"private": true,
-	"license": "ISC",
+	"license": "MPL-2.0",
+	"packageManager": "bun@1.20.22",
 	"scripts": {
 		"lint": "echo \"Error: no linter specified\"",
 		"typecheck": "tsc --noEmit",
