--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -20,11 +20,12 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
 
+      # @v2
+      - uses: oven-sh/setup-bun@22457c87c1b161cf7dde222c3e82b2b5f8d2bed2
+      - run: bun install prettier
+
       - name: Prettify code
-        uses: creyD/prettier_action@v4.6
-        with:
-          prettier_options: --no-config -c .
-          only_changed: true
+        run: bun prettier -c .
 
   test:
     runs-on: ubuntu-latest
