--- a/.github/workflows/prettier.yaml
+++ b/.github/workflows/prettier.yaml
@@ -25,7 +25,18 @@ jobs:
       - run: bun install prettier
 
       - name: Prettify code
-        run: bun prettier -c .
+        run: |
+          # Identify the target branch to diff against.
+          TARGET_BRANCH="origin/${{ github.base_ref }}"
+
+          echo "Identifying changed files against branch $TARGET_BRANCH..."
+
+          # Get a list of changed files, separated by NUL characters to handle spaces.
+          # - xargs -0 reads NUL-separated input.
+          # - xargs -r ensures Prettier doesn't run if there are no changed files.
+          # - prettier --check checks formatting without writing changes.
+          git diff --name-only -z --diff-filter=ACMRT $TARGET_BRANCH...HEAD | \
+            xargs -0 -r bun prettier --ignore-unknown --check
 
   test:
     runs-on: ubuntu-latest
