fix: make not found
Signed-off-by: Robert Zaremba <robert@zaremba.ch>

--- a/.github/workflows/move.yaml
+++ b/.github/workflows/move.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: run Sui Move test
-        run: make test-move-all
+        run: bash ./contrib/run-move-tests.sh test
 
   prettier:
     runs-on: ubuntu-latest
