--- a/.github/workflows/move.yaml
+++ b/.github/workflows/move.yaml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: install Make
+        run: sudo apt-get update && sudo apt-get install -y make
+
       - name: run Sui Move test
         run: make test-move-all
 
