--- a/.github/workflows/move.yaml
+++ b/.github/workflows/move.yaml
@@ -21,11 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: install Make
-        run: sudo apt-get update && sudo apt-get install -y make
-
       - name: run Sui Move test
-        run: make test-move-all
+        run: bash ./contrib/run-move-tests.sh test
 
   prettier:
     runs-on: ubuntu-latest
