--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -21,10 +21,9 @@ bitcoin_parser = { git = "https://github.com/gonative-cc/sui-bitcoin-spv.git", s
 
 [addresses]
 nbtc = "0x0"
-
-# Named addresses will be accessible in Move as `@name`. They're also exported:
-# for example, `std = "0x1"` is exported by the Standard Library.
-# alice = "0xA11CE"
+# TODO: need to set these addresses for mainnet
+bitcoin_lc = "0x1001"
+fallback_addr = "0x1002"
 
 [dev-dependencies]
 # The dev-dependencies section allows overriding dependencies for `--test` and
