--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -8,3 +8,7 @@ MD013: false
 MD014: false
 # MD030/list-marker-space Spaces after list markers
 MD030: false
+# MD033/no-inline-html
+MD033: false
+# MD041/first-line-heading
+MD041: false
