--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -9,6 +9,6 @@ MD014: false
 # MD030/list-marker-space Spaces after list markers
 MD030: false
 # MD033/no-inline-html
-MD033: false
+# MD033: false
 # MD041/first-line-heading
-MD041: false
+# MD041: false
