--- a/.github/workflows/markdown.yaml
+++ b/.github/workflows/markdown.yaml
@@ -29,5 +29,7 @@ jobs:
       - uses: DavidAnson/markdownlint-cli2-action@v20
         if: steps.changed-files.outputs.any_changed == 'true'
         with:
-          globs: ${{ steps.changed-files.outputs.all_changed_files }}
+          globs: |
+          ${{ steps.changed-files.outputs.all_changed_files }}
+          !**/docs
           separator: ","
