--- a/.github/workflows/markdown.yaml
+++ b/.github/workflows/markdown.yaml
@@ -29,5 +29,5 @@ jobs:
       - uses: DavidAnson/markdownlint-cli2-action@v20
         if: steps.changed-files.outputs.any_changed == 'true'
         with:
-          globs: ${{ steps.changed-files.outputs.all_changed_files }}
+          globs:  ${{ steps.changed-files.outputs.all_changed_files }},!bitcoin_parser/docs/**.md,!bitcoin_spv/docs/**.md,!bitcoin_executor/**md,
           separator: ","
