feat(nBTC): request Ika signature from nBTC  (#155)
* add ika depends

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add dwallet cap table

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add sign request for nBTC

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add dwallet cap for smart contract

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* make get dwallet cap private

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* apply reviews

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fix test

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* apply review

Signed-off-by: Vu Vo <vu.voth@gmail.com>

---------

Signed-off-by: Vu Vo <vu.voth@gmail.com>

--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -7,6 +7,8 @@ authors = ["Native"]
 [dependencies]
 bitcoin_spv = {local = "../bitcoin_spv"}
 bitcoin_parser = {local = "../bitcoin_parser"}
+ika_dwallet_2pc_mpc = {git = "https://github.com/dwallet-labs/ika.git", subdir = "deployed_contracts/testnet/ika_dwallet_2pc_mpc", rev = "main"}
+ika = {git = "https://github.com/dwallet-labs/ika.git", subdir = "deployed_contracts/testnet/ika", rev = "main"}
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
