update packages name
Signed-off-by: Vu Vo <vu.voth@gmail.com>

--- a/bitcoin_spv/Move.toml
+++ b/bitcoin_spv/Move.toml
@@ -8,7 +8,7 @@ authors = ["Native"]
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
 # For local dependencies use `local = path`. Path is relative to the package root
-bitcoin_parser = { local = "../bitcoin_parser" }
+bitcoin_lib = { local = "../bitcoin_lib" }
 
 # To resolve a version conflict and force a specific version for dependency
 # override use `override = true`
