--- a/bitcoin_executor/Move.toml
+++ b/bitcoin_executor/Move.toml
@@ -11,7 +11,7 @@ authors = ["Native"]
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
 
 # For local dependencies use `local = path`. Path is relative to the package root
-bitcoin_parser = {local = "../bitcoin_parser"}
+bitcoin_lib = {local = "../bitcoin_lib"}
 
 
 # To resolve a version conflict and force a specific version for dependency
