--- a/bitcoin_lib/Move.toml
+++ b/bitcoin_lib/Move.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitcoin_parser"
+name = "bitcoin_lib"
 edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 # license = ""           # e.g., "MIT", "GPL", "Apache 2.0"
 # authors = ["..."]      # e.g., ["Joe Smith (joesmith@noemail.com)", "John Snow (johnsnow@noemail.com)"]
@@ -17,7 +17,7 @@ edition = "2024.beta" # edition = "legacy" to use legacy (pre-2024) Move
 # Override = { local = "../conflicting/version", override = true }
 
 [addresses]
-bitcoin_parser = "0x00"
+bitcoin_lib = "0x00"
 
 # Named addresses will be accessible in Move as `@name`. They're also exported:
 # for example, `std = "0x1"` is exported by the Standard Library.
