--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -9,6 +9,7 @@ bitcoin_spv = {local = "../bitcoin_spv"}
 bitcoin_lib = {local = "../bitcoin_lib"}
 ika_dwallet_2pc_mpc = {git = "https://github.com/dwallet-labs/ika.git", subdir = "contracts/ika_dwallet_2pc_mpc", rev = "main"}
 ika = {git = "https://github.com/dwallet-labs/ika.git", subdir = "contracts/ika", rev = "main"}
+ika_common = {git = "https://github.com/dwallet-labs/ika.git", subdir = "contracts/ika_common", rev = "main"}
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
