--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
 		"test": "bun test"
 	},
 	"dependencies": {
+		"@ika.xyz/sdk": "^0.2.2",
+		"@mysten/sui": "^1.45.0",
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
 		"bitcoinjs-lib": "^6.1.7",
+		"dotenv": "^17.2.3",
 		"tiny-secp256k1": "^2.2.4"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"@types/node": "^24.9.1",
+		"@types/node": "^24.10.1",
 		"typescript": "^5.9.3"
 	},
 	"peerDependencies": {
