ci: update js workflow
Signed-off-by: Robert Zaremba <robert@zaremba.ch>

--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -11,6 +11,8 @@ on:
     paths:
       - '**.js'
       - '**.ts'
+      - '**/package.json'
+      - '**/bun.lock'
 
 concurrency:
   group: ci-${{ github.ref }}-${{ github.workflow }}
