--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
 		"bitcoinjs-lib": "^7.0.0",
+		"commander": "^14.0.2",
 		"dotenv": "^17.2.3",
 		"tiny-secp256k1": "^2.2.4"
 	},
