feat: ika v3 integration (#214)
* wip

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* remove unused import

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* wip

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* refactor

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* rename

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* use extend method for testing

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* package.json

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fix type

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fix test

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* remove file

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* remove test function

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add command

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add .env.example

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* return sign id

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* remove function

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* refactor

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* Apply suggestions from code review

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>
Signed-off-by: vuvoth <vu.voth@gmail.com>

* format

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* applied review

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* Apply suggestions from code review

Co-authored-by: sczembor <43810037+sczembor@users.noreply.github.com>
Signed-off-by: vuvoth <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* refactor

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fix bug not add sig hash after create

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by

--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
 	"scripts": {
 		"lint": "echo \"Error: no linter specified\"",
 		"typecheck": "tsc --noEmit",
-		"format:all": "prettier --no-config -w .",
+		"format:all": "prettier -w .",
 		"format:move": "prettier-move --config .prettier-move.json -w",
 		"format:move-all": "prettier-move --config .prettier-move.json -w **/*.move",
 		"test": "bun test"
 	},
 	"dependencies": {
+		"@ika.xyz/sdk": "^0.2.2",
+		"@mysten/sui": "^1.45.0",
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
-		"bitcoinjs-lib": "^6.1.7",
+		"bitcoinjs-lib": "^7.0.0",
+		"commander": "^14.0.2",
+		"dotenv": "^17.2.3",
 		"tiny-secp256k1": "^2.2.4"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"@types/node": "^24.9.1",
+		"@types/node": "^24.10.1",
 		"typescript": "^5.9.3"
 	},
 	"peerDependencies": {
