--- a/bitcoin-regtest/docker-compose.yml
+++ b/bitcoin-regtest/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   esplora-regtest:
-    image: blockstream/esplora:latest
+    image: blockstream/esplora:4.0.0
     container_name: esplora-regtest
 
     # CRITICAL: This startup script is required to launch the full stack.
