--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"lint": "echo \"Error: no linter specified\"",
 		"typecheck": "tsc --noEmit",
-		"format:all": "prettier -w '**/*.{js,ts,json,md,yml,yaml}' '!bitcoin-regtest/**' '!.devin/**'",
+		"format:all": "prettier -w --ignore-unknown . '!bitcoin-regtest/**'",
 		"format:move": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
 		"format:move-all": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
 		"test": "bun test"
