--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		// Bundler mode
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
-		"verbatimModuleSyntax": true,
+		// Temporarily disabled due to codegen incompatibility
+		// "verbatimModuleSyntax": true,
 		"noEmit": true,
 		// Best practices
 		"strict": true,
