fmt and move codegen to devDep
Signed-off-by: Vu Vo <vu.voth@gmail.com>

--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: eslint
         run: "bun run lint"
 
+      - name: gents
+        run: "bun run generate-ts"
+
       - name: typecheck
         run: "bun run typecheck"
 
