--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -21,6 +21,8 @@ concurrency:
 jobs:
   test:
     runs-on: ubuntu-latest
+    container:
+      image: mysten/sui-tools:testnet
 
     steps:
       - uses: actions/checkout@v4
