feat(sdk): generate TS bindings for nBTC and refactor scripts (#258)
* gen typescript from move code

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update code use a new sdk

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* small improve

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add docs

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt and move codegen to devDep

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fix ci

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update ci

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* Update sdk/sui-codegen.config.ts

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>
Signed-off-by: vuvoth <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add nbtc sdk package

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* move gitignore

Signed-off-by: Vu Vo <vu.voth@gmail.com>

---------

Signed-off-by: Vu Vo <vu.voth@gmail.com>
Signed-off-by: vuvoth <vu.voth@gmail.com>
Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"format:all": "prettier -w --ignore-unknown . '!bitcoin-regtest/**'",
 		"format:move": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
 		"format:move-all": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
-		"test": "bun test"
+		"test": "bun test",
+		"generate-ts": "cd sdk && bun run sui-ts-codegen generate"
 	},
 	"dependencies": {
 		"@ika.xyz/sdk": "^0.2.2",
@@ -25,6 +26,7 @@
 		"tiny-secp256k1": "^2.2.4"
 	},
 	"devDependencies": {
+		"@mysten/codegen": "^0.5.13",
 		"@types/bun": "latest",
 		"@types/node": "^24.10.1",
 		"typescript": "^5.9.3"
