--- a/sdk/nBTC/tsconfig.json
+++ b/sdk/nBTC/tsconfig.json
@@ -5,26 +5,25 @@
 		"target": "ESNext",
 		"module": "Preserve",
 		"moduleDetection": "force",
+		"jsx": "react-jsx",
 		"allowJs": true,
+
 		// Bundler mode
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
-		// Temporarily disabled due to codegen incompatibility
-		// "verbatimModuleSyntax": true,
+		"verbatimModuleSyntax": true,
 		"noEmit": true,
+
 		// Best practices
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
-		"forceConsistentCasingInFileNames": true,
+
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"noPropertyAccessFromIndexSignature": false
-		// "types": [vitest/globals"],
 	}
-	// with bun we don't need to specify then include
-	// "include": ["scripts/**/*.ts", "scripts/**/*.js", "scripts/vitest.config.ts"]
 }
