--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"format:move": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
 		"format:move-all": "prettier-move --config .prettier-move.json -w **/*.move '!bitcoin-regtest/**'",
 		"test": "bun test",
-		"generate-ts": "cd sdk && bun run sui-ts-codegen generate"
+		"generate-ts": "cd sdk && bun run sui-ts-codegen generate",
+		"publish": "bun run scripts/publish-all.ts"
 	},
 	"dependencies": {
 		"@ika.xyz/sdk": "^0.2.2",
@@ -23,7 +24,9 @@
 		"bitcoinjs-lib": "^7.0.0",
 		"commander": "^14.0.2",
 		"dotenv": "^17.2.3",
-		"tiny-secp256k1": "^2.2.4"
+		"smol-toml": "^1.6.0",
+		"tiny-secp256k1": "^2.2.4",
+		"zx": "^8.8.5"
 	},
 	"devDependencies": {
 		"@mysten/codegen": "^0.5.13",
