--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -4,3 +4,7 @@ MNEMONIC='your mnemonic here'
 
 # Bitcoin Esplora Indexer URL
 INDEXER_URL='http://localhost:8080/regtest'
+
+# nBTC contract addresses
+BITCOIN_LC='0x1001'
+FALLBACK_ADDR='0x1002'
