--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ MNEMONIC='your mnemonic here'
 # Bitcoin Esplora Indexer URL
 INDEXER_URL='http://localhost:8080/regtest'
 
-# nBTC contract addresses
-BITCOIN_LC='0x1001'
-FALLBACK_ADDR='0x1002'
+# nBTC contract addresses (optional - auto-generated during deployment)
+# BITCOIN_LC='0x1001'
+# FALLBACK_ADDR='0x1002'
