--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"test": "bun test",
 		"generate-ts": "cd sdk && bun run sui-ts-codegen generate",
 		"publish": "bun run scripts/publish.ts",
-		"deploy-nbtc": "bun run scripts/deploy-nbtc.ts"
+		"deploy-nbtc": "bun run scripts/deploy-nbtc.ts",
+		"deploy:clean": "rm -f deploy-information.json && echo 'Deployment information cleared'"
 	},
 	"dependencies": {
 		"@ika.xyz/sdk": "^0.2.7",
