--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Sui CLI path (optional - use custom sui binary path)
+# SUI_PATH='sui'
+
 # Sui wallet credentials (one of these is required)
 MNEMONIC='your mnemonic here'
 # ENCODE_SK='base64-encoded private key'
