--- a/nBTC/Move.toml
+++ b/nBTC/Move.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nBTC"
 
-# edition should be 2024.beta, we use alpha for "extend" feature in test
+# TODO: should be 2024.beta, we use alpha for "extend" feature in test
 edition = "2024.alpha"
 license = "MPL-2.0"
 authors = ["Native"]
@@ -9,9 +9,11 @@ authors = ["Native"]
 [dependencies]
 bitcoin_spv = {local = "../bitcoin_spv"}
 bitcoin_lib = {local = "../bitcoin_lib"}
+# TODO: switch to mainnet
 ika_common = {git = "https://github.com/dwallet-labs/ika.git", subdir = "deployed_contracts/testnet/ika_common", rev = "main"}
 ika_dwallet_2pc_mpc = {git = "https://github.com/dwallet-labs/ika.git", subdir = "deployed_contracts/testnet/ika_dwallet_2pc_mpc", rev = "main"}
 ika = {git = "https://github.com/dwallet-labs/ika.git", subdir = "deployed_contracts/testnet/ika", rev = "main"}
+
 # For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
 # Revision can be a branch, a tag, and a commit hash.
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
