--- a/sdk/nBTC/package.json
+++ b/sdk/nBTC/package.json
@@ -27,7 +27,7 @@
 		"type": "git",
 		"url": "git+https://github.com/sui-native/sui-native.git"
 	},
-	"author": "sui-native",
+	"author": "Native",
 	"license": "MPL-2.0",
 	"bugs": {
 		"url": "https://github.com/sui-native/sui-native/issues"
