--- a/sdk/nBTC/package.json
+++ b/sdk/nBTC/package.json
@@ -17,7 +17,7 @@
 		"README.md"
 	],
 	"scripts": {
-		"build": "bun build src/index.ts --outdir dist --target node --format esm && tsc --declaration --emitDeclarationOnly -p tsconfig.json",
+		"build": "bun build src/index.ts --outdir dist --target node --format esm && tsc --declaration --emitDeclarationOnly -p tsconfig.json && cp dist/src/index.d.ts dist/index.d.ts && cp dist/src/types.d.ts dist/types.d.ts",
 		"prepublishOnly": "bun run build"
 	},
 	"publishConfig": {
